--- a/src/AoC2024.fsproj
+++ b/src/AoC2024.fsproj
@@ -5,11 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="lib.fs" />
-    <Compile Include="Day01.fs" />
-    <Compile Include="Day02.fs" />
-    <Compile Include="Day03.fs" />
-    <Compile Include="Day04.fs" />
-    <Compile Include="Day05.fs" />
+    <Compile Include="Day*.fs" />
     <Compile Include="main.fs" />
   </ItemGroup>
   <ItemGroup>
