--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,8 @@
 [*.{fs,fsx,fsi}]
 fsharp_multiline_bracket_style = stroustrup
+fsharp_max_if_then_short_width = 80
 fsharp_max_if_then_else_short_width = 80
+fsharp_experimental_keep_indent_in_branch = true
 fsharp_max_infix_operator_expression = 120
 fsharp_max_record_width = 120
 fsharp_max_array_or_list_width = 120
