--- a/src/AoC2024.fsproj
+++ b/src/AoC2024.fsproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="lib.fs" />
-    <Compile Include="Day*.fs" />
+    <Compile Include="Day12.fs" />
     <Compile Include="main.fs" />
   </ItemGroup>
   <ItemGroup>
