--- a/src/AoC2024.fsproj
+++ b/src/AoC2024.fsproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="lib.fs" />
-    <Compile Include="Day22.fs" />
+    <Compile Include="Combinations.fs" />
+    <Compile Include="Day23.fs" />
     <Compile Include="main.fs" />
   </ItemGroup>
   <ItemGroup>
